@@ -1,7 +1,7 @@
 MD5 a57d0f57ffb079e9ad6695487fc7ec64 nxserver-enterprise-1.2.2.ebuild 491
-MD5 dd302b3d1260d5c15d3a4903bc79cfa4 nxserver-enterprise-1.3.0.ebuild 523
+MD5 a7be9173655ee96f721b53135882fe0d nxserver-enterprise-1.3.0.ebuild 523
 MD5 116579e8acda917e95f2b092daafa03c nxserver-enterprise-1.2.2-r1.ebuild 522
-MD5 1f6aea75b237dbda7eb1a2427e2eade3 ChangeLog 677
+MD5 39bcbe9b7ddd306a3b006b5ceb9358cc ChangeLog 677
 MD5 0ab793de2bd1de124536306d548c5a8a nxserver-enterprise-1.2.2-r2.ebuild 523
 MD5 77fd36d93b0a1b9f35abbe6a1c146561 metadata.xml 482
 MD5 082aa3e75fbb2ddb2a269fef7074900a files/digest-nxserver-enterprise-1.2.2 72
