@@ -1,0 +1,4 @@
+PATH=/usr/NX/bin
+ROOTPATH=/usr/NX/bin
+LDPATH=/usr/NX/lib
+CONFIG_PROTECT=/usr/NX/etc
