@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nxserver-enterprise
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-enterprise/ChangeLog,v 1.2 2003/09/02 14:15:30 stuart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-enterprise/ChangeLog,v 1.3 2003/12/21 16:26:12 stuart Exp $
+
+*nxserver-enterprise-1.3.0 (21 Dec 2003)
+
+  21 Dec 2003; Stuart Herbert <stuart@gentoo.org>
+  nxserver-enterprise-1.3.0.ebuild, files/1.3.0/50nxserver:
+  Version bump
 
   02 Sep 2003; stuart nxserver-enterprise-1.2.2.ebuild:
   Added blocks against nxserver-personal and nxserver-business editions
